--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles.css">
     <!-- CDN Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +16,38 @@
 
 <body>
     <!-- NFT CARD -->
-    <div>
-        
+    <div class="container">
+        <div class="nft-card">
+            <div class="nft-image">
+                <img src="./img/image-equilibrium.jpg" alt="">
+            </div>
+            <div class="nft-description">
+                <h1>Equilibrium #3429</h1>
+                <p>
+                    Our Equilibrium collection promotes balance and calm.
+                </p>
+                <div class="nft-price">
+                    <div class="nft-price-1">
+                        <img src="./img/icon-ethereum.svg" alt="">
+                        <p>0.041 ETH</p>
+                    </div>
+                    <div class="nft-price-1">
+                        <img src="./img/icon-clock.svg" alt="">
+                        <p>3 days left</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="nft-creator">
+                <div class="nft-avatar">
+                    <img src="./img/image-avatar.png" alt="">
+                </div>
+                <div class="nft-creator-name">
+                    <h2>Creation of</h2>
+                    <p>Jules Wyvern</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
