--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <!-- NFT CARD -->
     <div class="container">
         <div class="nft-card">
+            <div class="nft-view">
+                <div class="nft-view-color">
+                    
+                </div>
+                <div class="nft-eye">
+                    <img src="./img/icon-view.svg" alt="">
+                </div>
+            </div>
+            
             <div class="nft-image">
                 <img src="./img/image-equilibrium.jpg" alt="">
             </div>
